--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,6 @@
   "age": "Age",
   "diagnosis": "Diagnosis",
   "details": "Details",
-  "patient_card": "Patient Card"
+  "patient_card": "Patient Card",
+  "Patient Card Sample": "Patient Card Sample"
 }
